<resources>
    <string name = "app_name"> Mdate </string>
    <string name = "hello_blank_fragment"> Hello blank fragment </string>
    <string name = "action_contact"> Contact </string>
    <string name = "anction_durée"> On Duration </string>
    <string name = "button_onduree_txt"> On Time </string>
    <string name = "title_add"> Add </string>
    <string name = "title_compare"> Compare </string>
    <string name = "cancel"> Cancel </string>
    <string name = "close"> Close </string>
    <string name = "ok"> OK </string>

    <string name = "days"> Days </string>
    <string name = "month"> Month </string>
    <string name = "years"> Year </string>
    <string name = "total_days"> total Days </string>
    <string name = "total_month"> total Month </string>
    <string name = "total_years"> total year </string>
    <string name = "total_hour"> total hour </string>
    <string name = "total_min"> total min </string>
    <string name = "total_sec"> total sec </string>


    <string name = "action_business_mode"> Enterprise mode </string>
    <string name = "action_help"> Help </string>
    <string name = "action_about"> About </string>
    <string name = "mi_dure_lab_title"> Half: </string>
    <string name = "deb_tvw_txt"> START DATE </string>
    <string name = "tvw_fin_text"> END DATE </string>
    <string name = "deb_or_fin"> BEGINNING / END </string>
    <string name="action_settings">Settings</string>
    <string name="action_status">About</string>
    <string name="setting_language_title">Language</string>
    <string name="setting_mode_title">Mode</string>
    <string name="apply_content_description">Apply</string>
    <string name="storage_app_about">Lore et dolore magna aliqua.</string>
    <string name="storage_about"> <b>Storage :</b> All app data is stored locally on your phone.<br /><b>Version :</b> 1.0.6</string>
    <string name="mailing_about">
        Some bugs ? check for updates in play Strore (\'Rate\' Item in menu)
        For inquiries and support, please email us at datecalcul@gmail.com \n
        <b>ADIDO Juste-Médis</b>
    </string>

    <string name="term_condition_about">
        Term &amp; Conditions
    </string>

    <string name="privacy_about">
        	Privacy Policy
    </string>
    <string name="feedBack_description">Found a bug ? Have a suggestion? Let us know usig the form below! Please include your email so we can follow up.</string>
    <string name="email_edt_hint">Email (optional)</string>
    <string name="feed_desc_hint">Write your feedback</string>
    <string name="send_feedback">Send</string>
    <string name="action_feedback">Feedback</string>
    <string name="apply_settings">apply sttings</string>
    <string name="feed_message_empty">Why does your message Body is empty ?</string>
    <string name="welc_img_desc">Welcome at july</string>
    <string name="action_share">Share</string>
    <string name="send_to">Sending</string>
    <string name="sharing_app_text_intent_title">Thank for sharing</string>
    <string name="sharing_app_text">
        😎 You find it interesting ? share it \n
        https://play.google.com/store/apps/details?id=com.calculator.date
    </string>
    <string name="action_rating">Rate</string>
</resources>
