<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".FeedBackActivity">

    <TextView
        android:id="@+id/feed_description"
        style="@style/about_textViewStyle"
        android:text="@string/feedBack_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

        <EditText
            android:id="@+id/customEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edt_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/feed_description"
            />

        <EditText
            android:id="@+id/customFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/feed_desc_hint"
            android:inputType="textMultiLine"
            android:lines="4"
            android:maxLines="10"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customEmail"
            />

</androidx.constraintlayout.widget.ConstraintLayout>